--- a/Projet_14/src/App.css
+++ b/Projet_14/src/App.css
@@ -5,6 +5,13 @@
   margin: 0;
 }
 
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 /* .logo {
   height: 6em;
   padding: 1.5em;
